# credit-fraud-ml-system

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml
data/processed/: X_test.parquet  X_train.parquet  y_test.parquet  y_train.parquet
data/raw/: engineered_transactions.parquet
docs/: feature_categories.md  fraud_costs.md
models/: xgb_fraud.json
notebooks/: 00_create_synthetic_data.ipynb  01_eda_feature_engineering.ipynb  02_baseline_model.ipynb
notebooks/data/: X_test.parquet  X_train.parquet  engineered_transactions.parquet  y_test.parquet  y_train.parquet
src/credit_fraud/: train.py
src/credit_fraud/data/: download.py  prepare.py
