[project]
name = "credit-fraud-ml-system"
version = "0.1.0"
description = "End-to-end credit card fraud detection system with cost-based decisioning"
authors = [
    { name = "Andreas Schubert", email = "andy.schubert@outlook.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "numpy (>=1.24,<2.4)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "xgboost (>=3.1.2,<4.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "shap (>=0.50.0,<0.51.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "fastparquet (>=2025.12.0,<2026.0.0)"
]

[dependency-groups]
dev = [
    "kaggle (>=1.8.3,<2.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.poetry]
name = "credit-fraud-ml-system"
packages = [{ include = "credit_fraud", from = "src" }]

[tool.poetry.scripts]
download-data = "credit_fraud.data.download:main"
prepare-data = "credit_fraud.data.prepare:main"
train = "credit_fraud.models.train:main"
serve = "credit_fraud.api.app:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"